# grasping_selection

./: .gitignore  CMakeLists.txt  README.md
include/grasping_selection/: core.h  core_data.h  core_setup_base.h  core_setup_from_json.h  grasping_heuristics_base.h  grasping_heuristics_data.h  loading_grasping_dataset_base.h  loading_grasping_dataset_from_json.h  loading_grasping_selection_pipeline_base.h  loading_grasping_selection_pipeline_from_json.h
include/grasping_selection/heuristics/: grasping_heuristics_data.h
install/: grasping_selection.pc.in
src/grasping_selection/: core.cpp  core_setup_base.cpp  core_setup_from_json.cpp  loading_grasping_dataset_from_json.cpp  loading_grasping_selection_pipeline_from_json.cpp
src/grasping_selection/heuristics/: grasping_heuristics_base.cpp
src/tests/: test_01.cpp
